--- a/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
+++ b/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="infrastructure\containers\BasicDependencyRegistry.cs" />
     <Compile Include="infrastructure\containers\Container.cs" />
     <Compile Include="infrastructure\containers\ContainerResolver.cs" />
     <Compile Include="infrastructure\containers\DependencyCreationException.cs" />
