--- a/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
+++ b/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
@@ -56,6 +56,7 @@
     <Compile Include="infrastructure\containers\DependencyFactory.cs" />
     <Compile Include="infrastructure\containers\DependencyRegistry.cs" />
     <Compile Include="infrastructure\containers\DependencyContainer .cs" />
+    <Compile Include="infrastructure\containers\MissingDependencyFactoryException.cs" />
     <Compile Include="MessageGenerator.cs" />
     <Compile Include="tasks\Catalog.cs" />
     <Compile Include="tasks\StoreCatalogController.cs" />
